--- a/src/ex9_html-css-fundamentals-part1/task-03.css
+++ b/src/ex9_html-css-fundamentals-part1/task-03.css
@@ -11,7 +11,27 @@ body {
 }
 
 button {
-	width: 10rem;
-	height: 3rem;
-	box-shadow: 0 0 0 4px gray;
+	padding: 0.5rem 1rem;
+	border-radius: 0.5rem;
+	border: none;
+	font-size: 16pt;
+	font-weight: bold;
+	text-transform: uppercase;
+	background: linear-gradient(#e3e3e3 25%, #a6a7a6 75%);
+	box-shadow: 0 1px 1px 2px #7f7f7f, 0 0 0 8px #c5c5c5, 0 0 0 10px #f7f7f7, 0 0 0 12px #5e5e5e;
+	cursor: pointer;
+}
+
+button:hover {
+	opacity: 95%;
+}
+
+.buttonStar {
+	color: #888888;
+	font-size: 20pt;
+}
+
+.buttonContent {
+	color: #4e5053;
+	padding: 0.25rem;
 }
