--- a/src/ex11_html-css-advanced/task-01-2.css
+++ b/src/ex11_html-css-advanced/task-01-2.css
@@ -4,7 +4,7 @@
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 2.5s linear, hiddenLoader 0s 2.5s forwards;
+  animation: spin 2.5s linear infinite, hiddenLoader 0s 2.5s forwards;
   visibility: visible;
 }
 
