feat: make createNewList function, refactor dropdownUserMenu

--- a/src/kanban/public/styles/main.css
+++ b/src/kanban/public/styles/main.css
@@ -1,5 +1,7 @@
 @import "header.css";
 @import "dropdownUserMenu.css";
+@import "createNewList.css";
+@import "list.css";
 @import "footer.css";
 * {
   margin: 0;
@@ -15,4 +17,6 @@ body {
 
 main {
   flex-grow: 1;
+  padding: 1.5rem;
+  overflow-x: scroll;
 }
