--- a/src/kanban/public/styles/dropdownUserMenu.css
+++ b/src/kanban/public/styles/dropdownUserMenu.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   background-color: #0067A3;
   font-size: 16pt;
-  position: relative;
-  top: 1rem;
-  left: 0.5rem;
+  position: absolute;
+  top: 3.5rem;
+  right: 0.1rem;
   padding: 0.5rem;
 }
 
