--- a/src/kanban/public/styles/header.css
+++ b/src/kanban/public/styles/header.css
@@ -32,7 +32,7 @@ header {
   margin-left: 0.5rem;
 }
 
-header button {
+header #createNewListItem>button {
   justify-content: space-around;
   width: 11.3rem;
   height: 33px;
