--- a/src/kanban/public/styles/list.css
+++ b/src/kanban/public/styles/list.css
@@ -1,6 +1,8 @@
 .list {
-  width: 10rem;
+  min-width: 16.5rem;
+  height: max-content;
   background-color: #EBECF0;
   border-radius: 10px;
   padding: 0.5rem;
+  margin: 1rem;
 }
