--- a/src/kanban/public/styles/list.css
+++ b/src/kanban/public/styles/list.css
@@ -1,8 +1,66 @@
+#createNewList {
+  display: flex;
+  flex-direction: column;
+  background-color: #0067A3;
+  font-size: 16pt;
+  padding: 0.5rem;
+  margin-right: 5rem;
+}
+
+#createNewListActionButtons {
+  display: flex;
+}
+
+#createNewList button {
+  padding: 0.3rem;
+}
+
 .list {
   min-width: 16.5rem;
   height: max-content;
   background-color: #EBECF0;
   border-radius: 10px;
-  padding: 0.5rem;
+  padding: 1rem;
   margin: 1rem;
+  font-size: 18px;
+}
+
+.listHeader {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+  max-width: 16rem;
+}
+
+.addCard {
+  margin-top: 1rem;
+}
+
+.addCard button {
+  border: none;
+  background: none;
+  color: #5E6C84;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.addCard button:hover {
+  opacity: 80%;
+}
+
+.addCard button:disabled {
+  opacity: 35%;
+  cursor: initial;
+}
+
+.listTasks div {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.task {
+  background-color: #ffffff;
+  width: 15rem;
+  padding: 0.5rem;
+  border-radius: 5px;
 }
