--- a/src/kanban/public/styles/dropdownUserMenu.css
+++ b/src/kanban/public/styles/dropdownUserMenu.css
@@ -21,3 +21,9 @@
 #dropdowUserMenu a:hover {
   opacity: 80%;
 }
+
+@media screen and (max-width: 710px) {
+  #dropdowUserMenu {
+    top: 5.5rem;
+  }
+}
