--- a/src/kanban/public/styles/header.css
+++ b/src/kanban/public/styles/header.css
@@ -65,3 +65,9 @@ header button {
 header button, #appLogo, #userAvatar, #arrowDown {
   cursor: pointer;
 }
+
+@media screen and (max-width: 710px) {
+  header {
+    justify-content: space-around;
+  }
+}
