--- a/src/kanban/public/styles/list.css
+++ b/src/kanban/public/styles/list.css
@@ -15,14 +15,25 @@
   padding: 0.3rem;
 }
 
+.listWrapper {
+  min-width: 16.5rem;
+  height: max-content;
+  max-height: 60vh;
+  border-radius: 10px;
+  padding: 1rem;
+  background-color: #EBECF0;
+  margin: 1rem;
+  font-size: 18px;
+}
+
 .list {
   min-width: 16.5rem;
   height: max-content;
-  background-color: #EBECF0;
-  border-radius: 10px;
-  padding: 1rem;
-  margin: 1rem;
-  font-size: 18px;
+  max-height: 60vh;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  border-radius: 8px;
+  padding-right: 1rem;
 }
 
 .listHeader {
@@ -62,5 +73,6 @@
   background-color: #ffffff;
   width: 15rem;
   padding: 0.5rem;
+  margin: 0.1rem;
   border-radius: 5px;
 }
