feat: make some fixes, write createNewList functions

--- a/src/kanban/src/styles/main.css
+++ b/src/kanban/src/styles/main.css
@@ -1,5 +1,6 @@
 @import "header.css";
 @import "dropdownUserMenu.css";
+@import "createNewListBtn.css";
 @import "list.css";
 @import "footer.css";
 * {
