feat: make dropdownListMenu

--- a/src/kanban/src/styles/main.css
+++ b/src/kanban/src/styles/main.css
@@ -2,6 +2,7 @@
 @import "dropdownUserMenu.css";
 @import "createNewListBtn.css";
 @import "list.css";
+@import "listMenu.css";
 @import "footer.css";
 * {
   margin: 0;
