feat: make delete list function, fix logic in changeAddCardBtnState.js

--- a/src/kanban/src/styles/main.css
+++ b/src/kanban/src/styles/main.css
@@ -26,6 +26,11 @@ main {
   background-color: #007ac0;
 }
 
+#mainIsEmpty {
+  color: #ffffff;
+  font-size: 14pt;
+}
+
 ::-webkit-scrollbar {
   width: 12px;
   height: 12px;
